feat(backend): add user model and authentication system with token management

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,2 +1,4 @@
 PORT=your_server_port_here
 MONGO_URI=your_mongodb_uri_here
+TOKEN_SECRET=your_token_secret_here
+REFRESH_TOKEN_SECRET=your_refresh_token_secret_here
