--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^14.2.15",
+    "framer-motion": "^12.4.10",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18"
