--- a/web/package.json
+++ b/web/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@next/font": "^14.2.15",
+    "axios": "^1.8.3",
+    "focus-trap-react": "^11.0.3",
     "framer-motion": "^12.4.10",
+    "http-status-codes": "^2.3.0",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18"
