--- a/server/package.json
+++ b/server/package.json
@@ -21,5 +21,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.1",
     "nodemon": "^3.1.7"
+  },
+  "devDependencies": {
+    "prettier": "^3.5.3"
   }
 }
