--- a/web/package.json
+++ b/web/package.json
@@ -16,7 +16,8 @@
     "http-status-codes": "^2.3.0",
     "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-focus-lock": "^2.13.6"
   },
   "devDependencies": {
     "@types/node": "^20",
