--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.3",
     "@next/font": "^14.2.15",
     "axios": "^1.8.3",
     "focus-trap-react": "^11.0.3",
@@ -17,7 +18,9 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "react-focus-lock": "^2.13.6"
+    "react-focus-lock": "^2.13.6",
+    "react-hook-form": "^7.54.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20",
