--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "http-status-codes": "^2.3.0",
     "next": "14.2.15",
     "react": "^18",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18",
     "react-focus-lock": "^2.13.6",
     "react-hook-form": "^7.54.2",
