--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@next/font": "^14.2.15",
     "@tanstack/react-query": "^5.71.3",
     "axios": "^1.8.3",
+    "chroma-js": "^3.1.2",
     "focus-trap-react": "^11.0.3",
     "framer-motion": "^12.4.10",
     "http-status-codes": "^2.3.0",
@@ -26,6 +27,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@types/chroma-js": "^3.1.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
