--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^4.1.3",
     "@next/font": "^14.2.15",
     "@tanstack/react-query": "^5.71.3",
+    "@tanstack/react-query-devtools": "^5.74.7",
     "axios": "^1.8.3",
     "chroma-js": "^3.1.2",
     "focus-trap-react": "^11.0.3",
@@ -23,6 +24,8 @@
     "react-dom": "^18",
     "react-focus-lock": "^2.13.6",
     "react-hook-form": "^7.54.2",
+    "react-intersection-observer": "^9.16.0",
+    "use-debounce": "^10.0.4",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
