--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,26 @@
-PORT=your_server_port_here
-MONGO_URI=your_mongodb_uri_here
-TOKEN_SECRET=your_token_secret_here
-REFRESH_TOKEN_SECRET=your_refresh_token_secret_here
+# Server
+PORT=3000
+
+# Database
+MONGO_URI=mongodb://localhost:27017
+
+# JWT Secrets
+ACCESS_TOKEN_SECRET=your_access_token_secret
+REFRESH_TOKEN_SECRET=your_refresh_token_secret
+PASSWORD_RESET_TOKEN_SECRET=your_password_reset_secret
+EMAIL_VERIFICATION_TOKEN_SECRET=your_email_verification_secret
+
+# Token Expirations
+ACCESS_TOKEN_EXPIRES_IN=15m
+REFRESH_TOKEN_EXPIRES_IN=7d
+PASSWORD_RESET_TOKEN_EXPIRES_IN=1h
+EMAIL_VERIFICATION_TOKEN_EXPIRES_IN=24h
+
+# Frontend
+FRONTEND_URL=http://localhost:3001
+
+# Mailer 
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USER=your_mail_user
+MAIL_PASS=your_mail_pass
