--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "react-focus-lock": "^2.13.6",
     "react-hook-form": "^7.54.2",
     "react-intersection-observer": "^9.16.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-toastify": "^11.0.5",
     "use-debounce": "^10.0.4",
     "zod": "^3.24.2",
