fix(backend): resolve refresh token issue, update .env.example and readme

--- a/server/.env.example
+++ b/server/.env.example
@@ -10,11 +10,12 @@ REFRESH_TOKEN_SECRET=your_refresh_token_secret
 PASSWORD_RESET_TOKEN_SECRET=your_password_reset_secret
 EMAIL_VERIFICATION_TOKEN_SECRET=your_email_verification_secret
 
-# Token Expirations
+# Token & Cookies Expirations
 ACCESS_TOKEN_EXPIRES_IN=15m
 REFRESH_TOKEN_EXPIRES_IN=7d
 PASSWORD_RESET_TOKEN_EXPIRES_IN=1h
 EMAIL_VERIFICATION_TOKEN_EXPIRES_IN=24h
+COOKIES_EXPIRES_IN=604800000 # 7 days
 
 # Frontend
 FRONTEND_URL=http://localhost:3001
